<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.fragments.FirstFragment">

    <EditText
        android:id="@+id/user_name2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name2" />

    <EditText
        android:id="@+id/age2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age2" />

    <EditText
        android:id="@+id/email2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email2" />
    <EditText
        android:id="@+id/Password2"
        android:layout_width="match_parent"
        android:hint="@string/password2"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/to_be_continue2"
        android:layout_width="wrap_content"
        android:text="@string/continue_2"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"/>
</LinearLayout>